[package]
autotests = false
edition = "2021"
name = "derive_builder"
publish = false
version = "0.0.0"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = {version = "1.0.49", features = ["diff"]}

[dependencies]
quote = "1.0.36"
syn = {version= "2.0.66", features=["extra-traits"] }
# TODO
